tests/baselines/reference/returnType.errors.txt
tests/cases/conformance/structs/types/returnType.ts(10,1): error TS2322: Type '(n: string, a: number) => { name: string; age: number; }' is not assignable to type '(name: string, age: number) => Person'.
  Type '{ name: string; age: number; }' is not assignable to type 'Person'.


==== tests/cases/conformance/structs/types/returnType.ts (1 errors) ====
    // doc 8
    
    struct Person {
    	constructor(public name: string, public age: number) {}
    }
    
    var p: Person;
    var test = (name: string, age: number) => new Person(name, age);
    p = test("John", 25);
    test = function (n, a) {return {name: n, age: a} }; // error, type not compatible
    ~~~~
!!! error TS2322: Type '(n: string, a: number) => { name: string; age: number; }' is not assignable to type '(name: string, age: number) => Person'.
!!! error TS2322:   Type '{ name: string; age: number; }' is not assignable to type 'Person'.
    
    